--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,20 @@
 <script>
     var socket = io();
     var messages = document.getElementById('requests');
-    socket.on('request', function (msg) {
+
+    const queryString = window.location.search
+    const urlParams = new URLSearchParams(queryString);
+    const event = urlParams.get('event')
+        ? urlParams.get('event')
+        : 'request';
+
+    socket.on(event, function (dump) {
         var code = document.createElement('code');
-        code.textContent = msg;
+        code.textContent = JSON.stringify(dump,undefined, 4);
         var item = document.createElement('pre');
         item.appendChild(code);
         messages.appendChild(item);
+        messages.appendChild(document.createElement('hr'));
         window.scrollTo(0, document.body.scrollHeight);
     });
 
